--- a/pi-generation/build.gradle
+++ b/pi-generation/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'info.ankin.pi-search.conventions'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 application {
